RESOLVED FIXED19647
REGRESSION: Problem with extjs (insertAdjacentHTML)
https://bugs.webkit.org/show_bug.cgi?id=19647
Summary REGRESSION: Problem with extjs (insertAdjacentHTML)
John Moe
Reported 2008-06-17 19:13:54 PDT
This extjs example does not work in nightly builds >= r34578. It is possibly a bug in insertAdjacentHTML (added in r34543). NO_MODIFICATION_ALLOWED_ERR: DOM Exception 7
Attachments
patch (15.52 KB, patch)
2008-06-21 14:07 PDT, Sam Weinig
no flags
Mark Rowe (bdash)
Comment 1 2008-06-17 20:46:30 PDT
Sam Weinig
Comment 2 2008-06-21 14:07:04 PDT
Sam Weinig
Comment 3 2008-06-21 14:26:39 PDT
Comment on attachment 21871 [details] patch This needs more thought.
Sam Weinig
Comment 4 2008-06-21 14:38:55 PDT
Slightly changed version landed in r34721.
Note You need to log in before you can comment on or make changes to this bug.