WebCore:

2008-06-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=19647
        REGRESSION: Problem with extjs (insertAdjacentHTML)

        Test: fast/dynamic/insertAdjacentHTML-allowed-parents.html

        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::insertAdjacentHTML): Don't use innerHTML logic for creating
        the DocumentFragment from the html string.

LayoutTests:

2008-06-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Test for https://bugs.webkit.org/show_bug.cgi?id=19647
        REGRESSION: Problem with extjs (insertAdjacentHTML)

        * fast/dynamic/insertAdjacentHTML-allowed-parents-expected.txt: Added.
        * fast/dynamic/insertAdjacentHTML-allowed-parents.html: Added.



Canonical link: https://commits.webkit.org/27169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34721 268f45cc-cd09-0410-ab3c-d52691b4dbfc